--- a/software/usb-host/web-resource/index.html
+++ b/software/usb-host/web-resource/index.html
@@ -7,29 +7,33 @@
 <script type="text/javascript" src="colorPicker.js"></script>
 </head>
 <body>
-<input class="color" type="text" style="width:410px;"/>
+  Choose color with this color picker. Or call URL directly with <code>/set=?c=rrggbb</code>
+  <br/>
+
+Color: <input class="color" type="text" style="width:410px;" value="000000"/>
 <script>
 var inputTags = document.getElementsByTagName('input');
 var last_color = "000000";
 
 for (var n=inputTags.length;n--;) {
-  if (inputTags[n].className && inputTags[n].className.indexOf('color') > -1) {
-        inputTags[n].onclick = function(e) {
-           e = e || window.event;
-           colorPicker(e, 'B', 4, false, false, false);
-           colorPicker.cP.style.zIndex = 1;
-           colorPicker.exportColor = function() {
-              var c = colorPicker.CP.hex;
-              if (c != last_color) {
-                r = new XMLHttpRequest();
-                r.open("GET", "/set?c=" + c, true);
-                r.send(null);
-                last_color = c;
-              }
-           }
-        }
-  }
-}
+   if (inputTags[n].className && inputTags[n].className.indexOf('color') > -1) {
+     inputTags[n].onclick = function(e) {
+       e = e || window.event;
+       colorPicker(e, 'B', 4, false, false, false);
+       colorPicker.cP.style.zIndex = 1;
+       colorPicker.exportColor = function() {
+         var c = colorPicker.CP.hex;
+         if (c != last_color) {
+           r = new XMLHttpRequest();
+           r.open("GET", "/set?c=" + c, true);
+           r.send(null);
+           last_color = c;
+         }
+       }
+     }
+     inputTags[n].click();
+   }
+ }
 </script>
 
 </body>
